<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".temperatureTransformationApplication"
    tools:ignore="ResAuto">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/temperature_converter"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/enterTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enter_temperature"
        android:inputType="numberDecimal"
        android:textSize="28sp" />

    <Button
        android:id="@+id/cToF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/celsius_to_fahrenheit"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/degrees"
        android:textAlignment="center"
        android:textSize="30sp" />
</LinearLayout>